--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     const db = getFirestore(app);
 
     // REFERÊNCIA: coleção onde os nomes serão guardados
-    const rsvpsCol = collection(db, "confirmacoes");
+    const rsvpsCol = collection(db, "rsvps");
 
     const btn = document.getElementById("btnConfirm");
     const msgArea = document.getElementById("msgArea");
@@ -155,3 +155,4 @@
   </script>
 </body>
 </html>
+
