--- a/index.html
+++ b/index.html
@@ -6,37 +6,75 @@
   <title>Confirme sua presença — Sofia 15 anos</title>
   <style>
     :root{
-      --bg:#fff5f8;
-      --rose:#f7d6e1;
-      --wine:#8b1f3f;
-      --muted:#8b4358;
+      --bg:#ffb0c8; /* rosa mais forte no topo */
+      --bg2:#ffe1eb; /* gradiente mais claro embaixo */
+      --rose:#ff94ba; 
+      --wine:#a31548;
+      --muted:#6d1f3a;
       --card:#fff;
-      font-family: "Poppins", "Segoe UI", Arial, sans-serif;
+      font-family:"Poppins","Segoe UI",Arial,sans-serif;
     }
     *{box-sizing:border-box}
-    body{margin:0;background:linear-gradient(180deg,var(--bg),#fff);color:var(--muted);-webkit-font-smoothing:antialiased}
+    body{
+      margin:0;
+      background:linear-gradient(180deg,var(--bg),var(--bg2));
+      color:var(--muted);
+      -webkit-font-smoothing:antialiased;
+    }
     .container{max-width:920px;margin:28px auto;padding:20px}
     header{display:flex;align-items:center;gap:18px;margin-bottom:18px}
-    .logo{width:88px;height:88px;border-radius:999px;background:radial-gradient(circle at 25% 25%, #fff,#ffdfe9);display:flex;align-items:center;justify-content:center;box-shadow:0 6px 18px rgba(139,31,63,.06)}
+    .logo{
+      width:88px;height:88px;border-radius:999px;
+      background:radial-gradient(circle at 25% 25%, #fff,#ffb6ce);
+      display:flex;align-items:center;justify-content:center;
+      box-shadow:0 6px 18px rgba(163,21,72,.15)
+    }
     .logo h1{font-family:"Brush Script MT",cursive;margin:0;color:var(--wine);font-size:26px}
     h1.page-title{font-size:30px;margin:0;color:var(--wine)}
     p.subtitle{margin:6px 0 0;color:rgba(90,16,48,.75)}
-    .phrases{background:#fff;border-radius:12px;padding:18px;margin:20px 0;box-shadow:0 8px 24px rgba(139,31,63,.04);font-style:italic;color:var(--muted)}
-    .card{background:linear-gradient(180deg,#fff,#fff7fb);border-radius:14px;padding:28px;box-shadow:0 12px 40px rgba(139,31,63,.06);text-align:center}
+    .phrases{
+      background:#fff;border-radius:12px;padding:18px;margin:20px 0;
+      box-shadow:0 8px 24px rgba(139,31,63,.08);
+      font-style:italic;color:var(--muted)
+    }
+    .card{
+      background:linear-gradient(180deg,#fff,#fff3f8);
+      border-radius:14px;padding:28px;
+      box-shadow:0 12px 40px rgba(163,21,72,.1);
+      text-align:center
+    }
     .date-row{display:flex;justify-content:center;gap:24px;align-items:center;margin:18px 0}
-    .date-circle{width:84px;height:84px;border-radius:50%;display:flex;align-items:center;justify-content:center;border:6px solid rgba(139,31,63,.06);font-weight:700;color:var(--wine);font-size:28px}
+    .date-circle{
+      width:84px;height:84px;border-radius:50%;
+      display:flex;align-items:center;justify-content:center;
+      border:6px solid rgba(163,21,72,.1);
+      font-weight:700;color:var(--wine);font-size:28px
+    }
     .address{margin-top:8px;color:rgba(90,16,48,.85);font-size:15px}
-    .heart{width:58px;height:58px;border-radius:50%;display:flex;align-items:center;justify-content:center;margin:18px auto;background:linear-gradient(180deg,var(--wine),#6f1538);color:#fff;box-shadow:0 8px 18px rgba(139,31,63,.12)}
+    .heart{
+      width:58px;height:58px;border-radius:50%;
+      display:flex;align-items:center;justify-content:center;
+      margin:18px auto;background:linear-gradient(180deg,var(--wine),#7a1036);
+      color:#fff;box-shadow:0 8px 18px rgba(139,31,63,.2)
+    }
     .form-row{margin-top:14px;display:flex;gap:8px;justify-content:center;flex-wrap:wrap}
-    input[type=text]{padding:12px 14px;border-radius:8px;border:2px solid rgba(139,31,63,.08);min-width:280px;font-size:15px}
-    button{background:var(--wine);color:#fff;border:none;padding:12px 16px;border-radius:8px;cursor:pointer;font-weight:600}
+    input[type=text],input[type=number]{
+      padding:12px 14px;border-radius:8px;
+      border:2px solid rgba(163,21,72,.12);
+      min-width:220px;font-size:15px
+    }
+    input[type=number]{width:130px;text-align:center}
+    button{
+      background:var(--wine);color:#fff;border:none;
+      padding:12px 16px;border-radius:8px;cursor:pointer;
+      font-weight:600;transition:.2s
+    }
+    button:hover{background:#c2185b}
     .small{font-size:13px;color:rgba(90,16,48,.65)}
     .admin-link{display:block;margin-top:12px;text-decoration:underline;color:var(--wine)}
     footer{font-size:13px;color:rgba(90,16,48,.6);text-align:center;margin-top:28px}
-    /* simple fade-in */
     .fade-in{animation:fadeIn .8s ease both}
     @keyframes fadeIn{from{opacity:0;transform:translateY(10px)}to{opacity:1;transform:none}}
-    /* WhatsApp */
     .whatsapp{display:inline-block;margin-top:12px;background:#25D366;color:#fff;padding:10px 16px;border-radius:9px;text-decoration:none}
   </style>
 </head>
@@ -72,13 +110,17 @@
         </div>
       </div>
 
-      <div class="address">Rod. Tancredo Neves, 3116 – Volta Redonda<br><strong>Espaço Fred do Corisco – Rodovia dos Metalúrgicos</strong></div>
+      <div class="address">
+        Rod. Tancredo Neves, 3116 – Volta Redonda<br>
+        <strong>Espaço Fred do Corisco – Rodovia dos Metalúrgicos</strong>
+      </div>
 
       <div class="heart" aria-hidden="true">❤</div>
 
       <div style="max-width:760px;margin:0 auto">
         <div class="form-row">
           <input id="nome" type="text" placeholder="Digite seu nome completo" aria-label="Digite seu nome completo" />
+          <input id="assentos" type="number" placeholder="Qtd. de assentos" min="1" aria-label="Quantidade de assentos" />
           <button id="btnConfirm">Confirmar presença</button>
         </div>
 
@@ -93,12 +135,11 @@
     <footer>Obrigado — esperamos você para celebrar com a Sofia!</footer>
   </div>
 
-  <!-- Firebase modular SDK (v11) -->
+  <!-- Firebase -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-app.js";
     import { getFirestore, collection, addDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-firestore.js";
 
-    // === SUA CONFIG AQUI ===
     const firebaseConfig = {
       apiKey: "AIzaSyDmNGSKt_f_R0wIeTnS-51hVvGIXe_pjTw",
       authDomain: "sofia-15-anos-37213.firebaseapp.com",
@@ -110,8 +151,6 @@
 
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
-
-    // REFERÊNCIA: coleção onde os nomes serão guardados
     const rsvpsCol = collection(db, "rsvps");
 
     const btn = document.getElementById("btnConfirm");
@@ -119,10 +158,18 @@
 
     btn.addEventListener("click", async () => {
       const nomeEl = document.getElementById("nome");
+      const assentosEl = document.getElementById("assentos");
       const nome = nomeEl.value.trim();
+      const assentos = parseInt(assentosEl.value, 10);
+
       if (!nome) {
         msgArea.style.color = "crimson";
         msgArea.textContent = "Por favor, digite seu nome completo.";
+        return;
+      }
+      if (!assentos || assentos < 1) {
+        msgArea.style.color = "crimson";
+        msgArea.textContent = "Informe a quantidade de assentos.";
         return;
       }
 
@@ -132,11 +179,13 @@
       try {
         await addDoc(rsvpsCol, {
           nome: nome,
+          assentos: assentos,
           confirmadoEm: serverTimestamp()
         });
         msgArea.style.color = "green";
-        msgArea.textContent = `Presença confirmada! Obrigado, ${nome} 💖`;
+        msgArea.textContent = `Presença confirmada! Obrigado, ${nome} 💖 (${assentos} assento${assentos>1?'s':''})`;
         nomeEl.value = "";
+        assentosEl.value = "";
       } catch (e) {
         console.error(e);
         msgArea.style.color = "crimson";
@@ -147,12 +196,9 @@
       }
     });
 
-    // Botão WhatsApp — substitua pela URL final do seu site
-    const shareLink = "https://seu-usuario.github.io/sofia15anos/"; // <-- troque depois pelo link real
+    const shareLink = "https://seu-usuario.github.io/sofia15anos/";
     const shareText = encodeURIComponent("Acabei de confirmar presença no aniversário da Sofia! 🎉💖 " + shareLink);
-    const wa = document.getElementById("whatsappShare");
-    wa.href = `https://wa.me/?text=${shareText}`;
+    document.getElementById("whatsappShare").href = `https://wa.me/?text=${shareText}`;
   </script>
 </body>
 </html>
-
