--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
 
     <div class="phrases fade-in" id="phrases">
       <p>É muito mais do que a passagem do tempo:</p>
-      <p>... uma adolescência que chega ... uma festa, um brinde, e mais do que um dia! São 15 Anos de vida. Você faz parte dela!</p>
-      <p>O palco é só uma noite, mas os bons momentos viverão nesta noite inesquecível.</p>
+      <p>... uma adolescência que chega ... uma festa, um brinde, e mais do que um dia! São 15 Anos de vida. Você faz parte delas!</p>
+      <p>A festa é só uma noite, mas os bons momentos vividos nela serão inesqueciveis.</p>
     </div>
 
     <div class="card fade-in" role="region" aria-label="Convite">
@@ -202,3 +202,4 @@
   </script>
 </body>
 </html>
+
