--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Confirme sua presença — Sofia 15 anos</title>
+
+  <!-- Fonte caligráfica -->
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500;600&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+
   <style>
     :root{
-      --bg:#ffb0c8; /* rosa mais forte no topo */
-      --bg2:#ffe1eb; /* gradiente mais claro embaixo */
-      --rose:#ff94ba; 
+      --bg:#ff94ba; /* rosa mais forte */
+      --bg2:#ffe1eb;
       --wine:#a31548;
       --muted:#6d1f3a;
       --card:#fff;
@@ -23,20 +26,38 @@
     }
     .container{max-width:920px;margin:28px auto;padding:20px}
     header{display:flex;align-items:center;gap:18px;margin-bottom:18px}
+
+    /* Logo com Sofia em fonte cursiva */
     .logo{
-      width:88px;height:88px;border-radius:999px;
+      width:100px;height:100px;border-radius:999px;
       background:radial-gradient(circle at 25% 25%, #fff,#ffb6ce);
       display:flex;align-items:center;justify-content:center;
       box-shadow:0 6px 18px rgba(163,21,72,.15)
     }
-    .logo h1{font-family:"Brush Script MT",cursive;margin:0;color:var(--wine);font-size:26px}
+    .logo h1{
+      font-family:'Dancing Script',cursive;
+      font-size:36px;
+      color:var(--wine);
+      margin:0;
+    }
+
     h1.page-title{font-size:30px;margin:0;color:var(--wine)}
     p.subtitle{margin:6px 0 0;color:rgba(90,16,48,.75)}
+
+    /* Frases elegantes */
     .phrases{
-      background:#fff;border-radius:12px;padding:18px;margin:20px 0;
-      box-shadow:0 8px 24px rgba(139,31,63,.08);
-      font-style:italic;color:var(--muted)
+      font-family:'Dancing Script',cursive;
+      font-size:22px;
+      text-align:center;
+      background:rgba(255,255,255,0.85);
+      border-radius:16px;
+      padding:28px;
+      box-shadow:0 8px 24px rgba(139,31,63,.1);
+      color:var(--wine);
+      line-height:1.5;
+      margin:20px 0;
     }
+
     .card{
       background:linear-gradient(180deg,#fff,#fff3f8);
       border-radius:14px;padding:28px;
@@ -88,12 +109,14 @@
       </div>
     </header>
 
+    <!-- Frases bonitas -->
     <div class="phrases fade-in" id="phrases">
-      <p>É muito mais do que a passagem do tempo:</p>
-      <p>... uma adolescência que chega ... uma festa, um brinde, e mais do que um dia! São 15 Anos de vida. Você faz parte delas!</p>
-      <p>A festa é só uma noite, mas os bons momentos vividos nela serão inesqueciveis.</p>
+      <p>É muito mais do que a passagem do tempo...</p>
+      <p>... uma adolescência que chega, uma festa, um brinde, e mais do que um dia!<br>São 15 Anos de vida. <strong>Você faz parte delas!</strong></p>
+      <p><em>A festa é só uma noite, mas os bons momentos vividos nela serão inesquecíveis.</em></p>
     </div>
 
+    <!-- Cartão principal -->
     <div class="card fade-in" role="region" aria-label="Convite">
       <div style="font-size:20px;font-weight:600;color:var(--wine)">Sofia</div>
       <div style="font-size:15px;color:rgba(90,16,48,.8)">15 anos</div>
@@ -202,4 +225,3 @@
   </script>
 </body>
 </html>
-
